2010-10-27  Mario Sanchez Prada  <msanchez@igalia.com>

Reviewed by Martin Robinson.

        getTextAtOffset returns incorrect results if a link includes text and an image
        https://bugs.webkit.org/show_bug.cgi?id=47365

        Properly consider text under a non-text renderer in textForObject.

        We need to check all the children under a non-text renderer, if
        any, to consider when current object is not a text object but some
        of its children are, in order not to miss those portions of text
        by not properly handling those situations.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (textForRenderer): New. Get the text for a RenderObject's children.
        (textForObject): Use the new textForRenderer function.

2010-10-27  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Martin Robinson.

        getTextAtOffset returns incorrect results if a link includes text and an image
        https://bugs.webkit.org/show_bug.cgi?id=47365

        New test to make sure this bug is actually fixed.

        * tests/testatk.c:
        (testWebkitAtkLinksWithInlineImages): New test.
        (main): Added new test.

Canonical link: https://commits.webkit.org/61155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70634 268f45cc-cd09-0410-ab3c-d52691b4dbfc